--- a/src/styles/less/song-card.less
+++ b/src/styles/less/song-card.less
@@ -61,8 +61,12 @@
 
 
             .upvote-icon {
-                width: 25px;
-                height: 25px;
+                width: 30px;
+                height: 30px;
+            }
+
+            .likes-count {
+                padding-top: 3px;
             }
         }
 
